Update HTML and test plans

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,14 @@
   <title>Weekday Calculator</title>
 </head>
 <body>
+  <form id="form">
+    <label for="date">Enter a Date: </label>
+    <input type="text" name="date" id="date" required>
 
-  <ul id="response2"></ul>
+    <button type="submit" value="Submit">Submit</button>
+  </form>
+
+
+  <div id="output"></div>
 </body>
 </html>
